--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,17 @@ input[type="text"], input[type="password"], textarea, .cursor-text {
     transform: rotate(360deg);
   }
 }
+
+/* Global logo image helper so all headers can position the logo consistently */
+.header-logo-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  image-rendering: pixelated;
+}
+
+.header-logo-picture {
+  position: absolute;
+  inset: 3px; /* Account for border in most headers */
+  z-index: 2;
+}
