--- a/src/styles/pixel.css
+++ b/src/styles/pixel.css
@@ -40,6 +40,7 @@
   box-sizing: border-box;
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
   image-rendering: crisp-edges;
 }
 
